--- a/app/views/appearances/new.html.erb
+++ b/app/views/appearances/new.html.erb
@@ -5,5 +5,7 @@
   <%= f.number_field :rating, in: (1..5) %>
   <%= f.collection_select :episode_id, Episode.all, :id, :date %>
   <%= f.collection_select :guest_id, Guest.all, :id, :name %>
+  <%= f.label :producer %>
+  <%= f.text_field :producer %>
   <%= f.submit %>
 <% end %>
